# mc_translator

./: .gitignore  Cargo.toml  README.md  config.json
.github/workflows/: build.yml  release.yml
output_cn/: zh_cn.json
output_cn/assets/idas/lang/: zh_cn.json
src/: build.rs  config.rs  logging.rs  main.rs  message.rs  utils.rs
src/logic/: common.rs  mod.rs  openai.rs  processor.rs
src/logic/formats/: jar.rs  json.rs  lang.rs  mod.rs  snbt.rs
src/ui/: app.rs  fonts.rs  icon.rs
src/utils/: mcmeta.rs
