[package]
name = "mc_translator"
version = "0.2.13"
edition = "2024"
build = "src/build.rs"

[package.metadata.bundle]
identifier = "com.github.mc_translator"
icon = ["mc_translator.ico"]
copyright = "Copyright (c) 2024 mc_translator requirements"
category = "Productivity"
short_description = "Minecraft Translator Tool"
long_description = """
A tool to help translate Minecraft mods and resources.
"""

[build-dependencies]
winres = "0.1.12"

[dependencies]
eframe = "^0.33.3"
egui = "^0.33.3"

rfd = "^0.17"

# tokio 1.40+ 性能更好
tokio = { version = "^1.42", features = ["full"] }
tokio-util = { version = "^0.7", features = ["default"] }
# reqwest 0.12 是最新大版本，注意 feature 配置
reqwest = { version = "^0.12", features = ["json", "rustls-tls"] }

# 工具库
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
anyhow = "^1.0"
crossbeam-channel = "^0.5"
walkdir = "^2.5"
regex = "1"

# Zip 处理
zip = "7.1.0"

# 字体加载
font-loader = "^0.11"
image = { version = "^0.24", features = ["png"] }

# 日志
log = "^0.4"
env_logger = "^0.11"
chrono = "^0.4"